--- a/r_intro.html
+++ b/r_intro.html
@@ -265,7 +265,7 @@ TODO:
 [1] 3466
 function (x, ...) 
 UseMethod(&quot;mean&quot;)
-&lt;bytecode: 0x00000000152b5be8&gt;
+&lt;bytecode: 0x00000000149f5be8&gt;
 &lt;environment: namespace:base&gt;
 function(n){
   sample(x = c(1L:6L), size = n, replace = TRUE)
@@ -276,8 +276,6 @@ function(n){
 </div>
 </div>
 
-</div>
-</div>
 
 
 
