--- a/r_01_start.html
+++ b/r_01_start.html
@@ -7,11 +7,16 @@
       @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
     
       body {
-        width: 96%;
-        max-width: 800px;
+        width: 100%;
         margin: 0 auto;
-        font-family: Arial;
-        font-size: 14pt;
+        font-family: 'Montserrat', Arial;
+        font-size: 12pt;
+        line-height: 20pt;
+        font-weight: 300;
+      }
+      
+      h1, h2, h3, h4, h5, h6 {
+        font-weight: 400;
       }
     </style>
 
