--- a/r_01_start.html
+++ b/r_01_start.html
@@ -7,7 +7,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
     
       body {
-        width: 98%;
+        width: 96%;
         margin: 0 auto;
         font-family: 'Montserrat', Arial;
         font-size: 12pt;
@@ -19,6 +19,11 @@
         font-weight: 400;
       }
       
+      @media only screen and (min-width: 768px) {
+        body {
+          max-width: 800px;
+        }
+      }
     </style>
 
   </head>
