--- a/r_01_start.html
+++ b/r_01_start.html
@@ -22,6 +22,7 @@
       @media only screen and (min-width: 768px) {
         body {
           max-width: 800px;
+          background-color: red;
         }
       }
     </style>
